# thaumoctopus

./: CMakeLists.txt  README.md  preview.pc.in
EXAMPLES/: CMakeLists.txt  dumb_buffer.cpp
include/: preview.h
src/: preview.cpp
